kubernetes_deploy/content-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: content-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
      - name: content-api
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/jason-lab/multi-container-ruby:content-api-1.3
        ports:
        - containerPort: 4567
