kubernetes_deploy/rails-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-app
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/jason-lab/multi-container-ruby:rails-app-1.3
        ports:
        - containerPort: 3000
