kubernetes_deploy/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/jason-lab/multi-container-ruby:worker-1.3
        ports:
        - containerPort: 4567
