kubernetes_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: multi-container-demo
  annotations:
spec:
  tls:
  - hosts:
    - jb-multi-container-demo.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: jb-multi-container-demo.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rails-app-service
          servicePort: 3000
